<resources>
    <string name="app_name">Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido1">Apellido 1</string>
    <string name="apellido2">Apellido 2</string>
    <string name="telefono">Teléfono</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="email">Correo Electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirma_contraseña">Confirmar Contraseña</string>
    <string name="observaciones">Observaciones</string>
    <string name="validar">Validar</string>
    <string name="limpiar">Limpiar</string>
</resources>